Add startup arguments for Hazelcast optimisations (#7897)